<resources>
    <string name="app_name">Clear PDF Scanner Mobile App</string>

    <!-- Ad Mobs   -->
    <string name="app_id" translatable="false">ca-app-pub-7651324916149866~6348928068</string>
    <string name="banner_id" translatable="false">ca-app-pub-7651324916149866/1301126265</string>
    <string name="interstitial_id" translatable="false">ca-app-pub-7651324916149866/3390450598</string>
    <string name="open_app_id" translatable="false">ca-app-pub-7651324916149866/8451205588</string>

    <string name="product_id" translatable="false">pdf_scanner_premium</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="pdf_scanner">PDF Scanner</string>
    <string name="recent_files">Recent Files</string>
    <string name="scan_document">Scan Document</string>
    <string name="id_card_scanning">Scan \n Id Card</string>
    <string name="extract_text">Extract Text</string>
    <string name="merge_files">Merge\nFiles</string>
    <string name="split_icon">Split\nIcon</string>
    <string name="split_files">Split\nFiles</string>
    <string name="please_select">Please Select</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="text_extracted">Text Extracted</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="switch_image">Switch</string>
    <string name="select_save_type">Select File Type</string>
    <string name="jpg">.jpg</string>
    <string name="pdf">.pdf</string>
    <string name="select_type_desc">Please select type of file to save the scanned data.</string>
    <string name="create_signature">Create Signature</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save Signature</string>
    <string name="transparent">Transparent</string>
    <string name="please_select_background">Please Select Background</string>
    <string name="white">White</string>
    <string name="scan_id_card">Scan Id Card</string>
    <string name="pdf_tools">Pdf \nTools</string>
    <string name="note_pad">Create\nText</string>
    <string name="pdf_lock">Pdf\nLock</string>
    <string name="password">Password</string>
    <string name="please_set_password_to">please set password to encrypt your selected file.</string>
    <string name="settings">Settings</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="ad_free_heading">Enjoy an Ad-Free Experience - upgrade to Premium for using all features.</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="about">About App</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate Our App</string>
    <string name="share_app"><![CDATA[Share App with Friends & Family]]></string>
    <string name="version">Version</string>
    <string name="name">my_new_file_abc.jpg</string>
    <string name="time">23/11/2025,10:45 am</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="details">Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="file_name">File Name</string>
    <string name="image_path">/storage/emulated/0/DCIM</string>
    <string name="pdf_path">/storage/emulated/0/DOCUMENTS</string>
    <string name="open">Open</string>
    <string name="print">Print</string>
    <string name="file_details">File Details</string>
    <string name="request_storage_permission">Request Storage Permission</string>
    <string name="request_storage_permission_details">This app requires storage access to manage your documents.</string>
    <string name="allow_access">Allow Access</string>
    <string name="text_extension">.txt</string>
    <string name="file">File</string>
    <string name="image">Image</string>
    <string name="please_select_file">Please select files to split</string>
    <string name="split">Split</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="path_t">Path</string>
    <string name="close">Close</string>
    <string name="are_you_sure">Are you sure to delete the file?</string>
    <string name="french">French</string>
    <string name="title_language">Language</string>
    <string name="china">China</string>
    <string name="merge">Merge</string>
    <string name="crop">Crop</string>
    <string name="what_type_of_problems">What type of problem are you facing?</string>
    <string name="crash">Crash</string>
    <string name="app_not_responding">App not responding</string>
    <string name="adds">Ads</string>
    <string name="please_describe_issue">Please describe issues and suggestions</string>
    <string name="submit">Submit</string>
    <string name="functional_disable">Functional Disable</string>
    <string name="filter_not_appplied">Filter Not Applied</string>
    <string name="premium_not_working">Premium Not Working</string>
    <string name="how_to_use">How To Use</string>
    <string name="suggestions">Suggestions</string>
    <string name="arabic">Arabic</string>
    <string name="dutch">Dutch</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="bengali">Bangali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">portuguese</string>
    <string name="urdu">Urdu</string>
    <string name="indonesian">Indonasian</string>
    <string name="japanese">Japanese</string>
    <string name="turkish">Turkish</string>
    <string name="korean">Korean</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="are_you_happy">Are you happy with this app?</string>
    <string name="how_would_you">How would you love this app</string>
    <string name="rate_on_playstore">Rate on Playstore</string>
    <string name="please_wait">Please Wait...</string>
    <string name="scan_documents">Scan documents and convert\ninto PDF</string>
    <string name="action_contains_advertisement">This action might contains advertisement.</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="id_card">ID Card</string>
    <string name="scan_doc">Scan Doc</string>
    <string name="create_sign">Create Sign</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="lock_pdf">Lock PDF</string>
    <string name="recent">Recent</string>
    <string name="date" translatable="false">22 March 2025</string>
    <string name="all_files">All Files</string>
    <string name="files">Files</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="grid">Grid</string>
    <string name="name_new">Name</string>
    <string name="file_size">File Size</string>
    <string name="from_new_to_old">From New To Old</string>
    <string name="from_old_to_new">From old to new</string>
    <string name="extracted_text">Extracted Text</string>
    <string name="scanned_documents">Scanned Documents</string>
    <string name="merged_pdf">Merged PDF</string>
    <string name="signatures">Signatures</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="save_as">Save As</string>
    <string name="file_type">File Type</string>
    <string name="pdf_new">PDF</string>
    <string name="jpg_new">JPG</string>
    <string name="file_created_successfully">File Created Successfully!</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="please_select_files_to_merge">Please Select Files to merge:</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="done_custom">Done</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_to_exit">Are you sure?</string>
    <string name="do_you_want_to_close">Do you want to close application?</string>
    <string name="both">both</string>
    <string name="unlimited_access_to">Unlimited Access to All Premium Tools</string>
    <string name="your_subscription_auto_renew">Your subscription auto-renews yearly unless canceled.</string>
    <string name="subscription_are_managed_via">Subscriptions are managed via your Google Play Billing and will renew automatically unless canceled at least 24 hours before the current period ends.  After purchase, you can manage your subscriptions in your Account Settings.</string>
    <string name="start_3_days">Start 3 days free trail</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rs_600">Rs 600/Month</string>
    <string name="rs_5500">Rs 5,500/ Year</string>
    <string name="rs_6700">Rs 6,700/ One-time Purchase</string>
    <string name="get_3_days">Get 3 Days Free Trials</string>
    <string name="unlock_all_feature">Unlock all features</string>
    <string name="pro">PRO</string>
    <string name="basic">Basic</string>
    <string name="all_pdf_scanner">All PDF Scanner</string>
    <string name="all_document_scanner">All Document Scanner</string>
    <string name="merge_and_split"><![CDATA[Merge & Split PDF]]></string>
    <string name="lock_all_pdf">Lock All PDF</string>
    <string name="remove_all_ads">Remove All Ads</string>
    <string name="no_upfront">No Upfront Payment Required</string>
    <string name="subscribe_auto"><![CDATA[Subscribe auto-renews & cancel anytime]]></string>
    <string name="try_3_days">Try 3-Days Free, Then %1$s/week</string>
</resources>