<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/title_history" />
<!--    <item-->
<!--        android:id="@+id/navigation_scan"-->
<!--        android:icon="@drawable/scanner"-->
<!--        android:title="@string/title_scanner" />-->
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />
</menu>