<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBottomSheetHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/poppins_extra_bold"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/sort_by"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sort_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/name_new"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/sort_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/file_size"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/from_new_to_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/from_new_to_old"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/from_old_to_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/from_old_to_new"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>