<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/rating_bottom_sheet_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/are_you_happy"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/how_would_you"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <!-- RatingBar -->
        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/red"
            android:rating="0"
            android:stepSize="1" />

        <Button
            android:id="@+id/btnRatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:backgroundTint="@color/red"
            android:text="@string/rate"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivEmoji"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/info"
        android:src="@drawable/emoji_sad" />


</RelativeLayout>