<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_12sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/file_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/edtPDFFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/_11ssp" />


        <TextView
            android:id="@+id/tvBottomSheetHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/poppins_extra_bold"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/please_select_background"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cbTransparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_semi_bold_italic"
                    android:text="@string/transparent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cbWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_semi_bold_italic"
                    android:text="@string/white"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_save_bg"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_cancel_bg"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/light_gray" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>