<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_12sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/are_you_sure_to_exit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/do_you_want_to_close"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/light_gray" />

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_save_bg"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>