<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg"
    android:orientation="vertical"
    tools:context=".fragments.subfragments.SignatureFragment">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_icon"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_toEndOf="@id/ivBack"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/create_signature"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:penColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnSaveSignature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_save_bg"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/save"
            android:textColor="@color/white" />

        <View
            android:layout_width="@dimen/_24sdp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnClearPad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/clear_pad"
            android:textColor="@color/light_gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_id" />

</LinearLayout>