<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_12sdp"
    tools:context=".activities.PermissionManagementActivity">

    <TextView
        android:id="@+id/tvRequestPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/request_storage_permission"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRequestPermission"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/request_storage_permission_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/folder" />


    <TextView
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20ssp"
        android:background="@drawable/btn_save_bg"
        android:backgroundTint="@color/status_bar"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/allow_access"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />
</RelativeLayout>