<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250sdp"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/please_select_files_to_merge"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMergeFiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/light_gray" />

        <View
            android:layout_width="@dimen/_24sdp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_save_bg"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/merge"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

</LinearLayout>